- dto 분리 - 인터페이스 재구축