@@ -3,12 +3,15 @@ package io.nicheblog.dreamdiary.global.intrfc.mapstruct;
 import io.nicheblog.dreamdiary.global.intrfc.entity.BaseCrudEntity;
 import io.nicheblog.dreamdiary.global.intrfc.mapstruct.helper.MapstructHelper;
 import io.nicheblog.dreamdiary.global.intrfc.model.BaseCrudDto;
+import io.nicheblog.dreamdiary.global.util.cmm.CmmUtils;
 import org.apache.commons.collections4.CollectionUtils;
 import org.mapstruct.AfterMapping;
 import org.mapstruct.MappingTarget;
-import org.mapstruct.Named;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
@@ -21,17 +24,8 @@ import java.util.stream.Collectors;
  *
  * @author nichefish
  */
-public interface BaseCrudMapstruct<Dto extends BaseCrudDto, ListDto extends BaseCrudDto, Entity extends BaseCrudEntity>
+public interface BaseReadMapstruct<Dto extends BaseCrudDto, Entity extends BaseCrudEntity>
         extends BaseMapstruct<Dto, Entity> {
-
-    /**
-     * Entity -> ListDto 변환
-     *
-     * @param entity 변환할 Entity 객체
-     * @return {@link ListDto} -- 변환된 ListDto 객체
-     */
-    @Named("toListDto")
-    ListDto toListDto(final Entity entity) throws Exception;
 
     /**
      * EntityList to DtoList
@@ -39,13 +33,13 @@ public interface BaseCrudMapstruct<Dto extends BaseCrudDto, ListDto extends Base
      * @param entityList 변환할 Entity 목록
      * @return {@link List} -- 변환된 Dto 목록
      */
-    default List<ListDto> toDtoList(final List<Entity> entityList) {
+    default List<Dto> toDtoList(final List<Entity> entityList) {
         if (CollectionUtils.isEmpty(entityList)) return null;
         AtomicLong i = new AtomicLong(1);
         return entityList.stream()
                 .map(entity -> {
                     try {
-                        ListDto dto = this.toListDto(entity);
+                        Dto dto = this.toDto(entity);
                         dto.setRnum(i.getAndIncrement());
                         return dto;
                     } catch (final Exception e) {
@@ -56,43 +50,29 @@ public interface BaseCrudMapstruct<Dto extends BaseCrudDto, ListDto extends Base
     }
 
     /**
-     * ListDto -> Dto 변환
-     * @param listDto 변환할 ListDto 객체
-     * @return {@link Dto} -- 변환된 Dto 객체
-     */
-    Dto convert(final ListDto listDto) throws Exception;
-
-    /**
-     * ListDto -> Entity 변환 (dto 변환 후 toEntity)
+     * entityPage to DtoPage
      *
-     * @param listDto 변환할 ListDto 객체
-     * @return {@link Entity} -- 변환된 Entity 객체
-     */
-    @Named("convertToEntity")
-    default Entity toEntityFromList(final ListDto listDto) throws Exception {
-        Dto dto = this.convert(listDto);
-        return this.toEntity(dto);
-    }
-
-    /**
-     * DtoList to EntityList
-     *
-     * @param dtoList 변환할 ListDto 목록
+     * @param entityPage 변환할 Entity 목록
      * @return {@link List} -- 변환된 Dto 목록
      */
-    default List<Entity> toEntityList(final List<ListDto> dtoList) {
-        if (CollectionUtils.isEmpty(dtoList)) return null;
-        AtomicLong i = new AtomicLong(1);
-        return dtoList.stream()
-                .map(dto -> {
+    default Page<Dto> toDtoPage(final Page<Entity> entityPage) {
+        if (CollectionUtils.isEmpty(entityPage.getContent())) return null;
+        final AtomicInteger counter = new AtomicInteger(1);
+        final List<Dto> dtoList = entityPage.stream()
+                .map(entity -> {
                     try {
-                        return this.toEntityFromList(dto);
+                        final Dto dto = this.toDto(entity);
+                        dto.setRnum(CmmUtils.getPageRnum(entityPage, counter.getAndIncrement()));
+                        return dto;
                     } catch (final Exception e) {
                         throw new RuntimeException(e);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(dtoList, entityPage.getPageable(), entityPage.getTotalElements());
     }
+
 
     /* ----- */
 
@@ -114,7 +94,7 @@ public interface BaseCrudMapstruct<Dto extends BaseCrudDto, ListDto extends Base
      * @param dto 매핑 대상인 ListDto 객체
      */
     @AfterMapping
-    default void mapBaseListFields(final Entity entity, final @MappingTarget ListDto dto) throws Exception {
+    default void mapBaseListFields(final Entity entity, final @MappingTarget Dto dto) throws Exception {
         MapstructHelper.mapBaseFields(entity, dto);
     }
 }
